--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  provider: ^6.0.5
   google_fonts: ^6.1.0
   lottie: ^3.0.0
   animate_do: ^3.3.0
